fix: repair issue with invisible ThanksToTheUser component

--- a/src/components/Sections/Form/components/ThanksToTheUser/ThanksToTheUser.css
+++ b/src/components/Sections/Form/components/ThanksToTheUser/ThanksToTheUser.css
@@ -16,6 +16,9 @@
 /* ThanksToTheUser components */
 
 .thanksToTheUser {
+    position: absolute;
+    top: 0;
+
     height: 100dvh;
     width: 100%;
 }
